--- a/advanced-usage/package.json
+++ b/advanced-usage/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bundle.cjs.js",
   "module": "dist/bundle.es.js",
   "scripts": {
-    "build": "rollup --config rollup.config.js"
+    "build": "rollup --config rollup.config.js",
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,11 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "rollup": "^2.60.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
