--- a/basic-usage/package.json
+++ b/basic-usage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "advanced-usage",
+  "name": "basic-usage",
   "version": "1.0.0",
   "description": "",
   "main": "dist/bundle.cjs.js",
@@ -22,11 +22,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "rollup": "^2.60.2"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21"
   }
 }
