--- a/advanced-usage/package.json
+++ b/advanced-usage/package.json
@@ -24,7 +24,9 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
-    "rollup": "^2.60.2"
+    "postcss": "^8.4.4",
+    "rollup": "^2.60.2",
+    "rollup-plugin-postcss": "^4.0.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
