--- a/advanced-usage/package.json
+++ b/advanced-usage/package.json
@@ -26,7 +26,8 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "postcss": "^8.4.4",
     "rollup": "^2.60.2",
-    "rollup-plugin-postcss": "^4.0.2"
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
